@@ -27,6 +27,7 @@ import org.jetbrains.annotations.NotNull;
 import revxrsal.commands.command.CommandActor;
 import revxrsal.commands.node.ExecutionContext;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -41,7 +42,7 @@ final class EmptySuggestionProvider implements SuggestionProvider<CommandActor> 
 
     @Override
     public @NotNull List<String> getSuggestions(@NotNull ExecutionContext<CommandActor> context) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
